--- a/src/css/Favorites.css
+++ b/src/css/Favorites.css
@@ -2,6 +2,10 @@
   padding: 2rem;
   width: 100%;
   box-sizing: border-box;
+
+  @media only screen and (max-width: 600px) {
+    padding: 0;
+  }
 }
 
 .favorites h2 {
